--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
-    <meta charset="UTF-8">
-    <title>Hello There!</title>
+    <title>Spring Security Example</title>
 </head>
 <body>
+<h1>Welcome!</h1>
 
+<p>Click <a th:href="@{/hello}">here</a> to see a greeting.</p>
 </body>
 </html>
