--- a/react_front_end/src/App.css
+++ b/react_front_end/src/App.css
@@ -1,17 +1,20 @@
 .App {
+  background-color: #F5F6FA;
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+  text-align: left;
+  margin-left: 6%;
+  height: 100px;
 }
 
 .App-header {
-  text-align: center;
-  background-color: #222;
+  text-align: left;
+  background-color: #3486F8;
   height: 150px;
   padding: 20px;
   color: white;
+  margin-bottom: 50px;
 }
 
 .App-homepage {
