--- a/react_front_end/src/Components/LoanCard.css
+++ b/react_front_end/src/Components/LoanCard.css
@@ -1,6 +1,11 @@
 .LoanCard {
-    background-color: rgb(0, 247, 255);
+    background-color: #FFFFFF;
     text-align: center;
     width: 70%;
-    margin: auto;
+    margin-top: 50px;
+    margin-bottom: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 50px;
+    box-shadow: 0 0 10px;
 }
