--- a/react_front_end_2/src/assets/scss/black-dashboard-react.scss
+++ b/react_front_end_2/src/assets/scss/black-dashboard-react.scss
@@ -70,6 +70,7 @@
  @import "black-dashboard-react/custom/dropdown.scss";
  @import "black-dashboard-react/custom/footer.scss";
  @import "black-dashboard-react/custom/forms.scss";
+ @import "black-dashboard-react/custom/home-view.scss";
  @import "black-dashboard-react/custom/images.scss";
  @import "black-dashboard-react/custom/modal.scss";
  @import "black-dashboard-react/custom/navbar.scss";
